docs(spindle-ui): fix DropdownMenu docs

--- a/packages/spindle-ui/src/DropdownMenu/DropdownMenu.stories.mdx
+++ b/packages/spindle-ui/src/DropdownMenu/DropdownMenu.stories.mdx
@@ -50,7 +50,7 @@ import {
 
 ### DropdownMenu.ListItem
 <Description>
-  - `onClick`（必須）: `open`プロパティを変更するための処理を指定してください。
+  - `onClick`（必須）: 各要素をクリックした際に実行したい処理を指定してください。
 </Description>
 <Description>
   - `icon`（任意）: DropdownMenu内にアイコンを表示したい場合は、指定することができます。
