docs(spindle-ui): fix to close with SubtleButton

--- a/packages/spindle-ui/src/Dialog/Dialog.stories.mdx
+++ b/packages/spindle-ui/src/Dialog/Dialog.stories.mdx
@@ -215,7 +215,7 @@ function DialogExample() {
         </Button>
         <SubtleButton size="medium">
           とじる
-        </Button>
+        </SubtleButton>
       </Dialog.ButtonGroup>
     </Dialog.StyleOnly>
   );
