fix(spindle-ui): fix markup for UnderlineTab

--- a/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.stories.mdx
+++ b/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.stories.mdx
@@ -102,19 +102,19 @@ UnderlineTab内の各項目は`tab`roleを持ち、`id`には`options`の`id`が
 <div class="spui-UnderlineTab spui-UnderlineTab--fixed spui-UnderlineTab--border">
   <div class="spui-UnderlineTab-container" role="tablist">
     <button aria-controls="fixed-all-tabpanel" aria-selected="true" class="spui-UnderlineTab-button" id="fixed-all" tabindex="0" type="button" role="tab" style="max-width: calc(33.3333%);">
-      <p class="spui-UnderlineTab-labelWrapper">
+      <span class="spui-UnderlineTab-labelWrapper">
         <span class="spui-UnderlineTab-label">すべて</span>
-      </p>
+      </span>
     </button>
     <button aria-controls="fixed-follow-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="fixed-follow" tabindex="-1" type="button" role="tab" style="max-width: calc(33.3333%);">
-      <p class="spui-UnderlineTab-labelWrapper">
+      <span class="spui-UnderlineTab-labelWrapper">
         <span class="spui-UnderlineTab-label">フォロー</span>
-      </p>
+      </span>
     </button>
     <button aria-controls="fixed-follower-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="fixed-follower" tabindex="-1" type="button" role="tab" style="max-width: calc(33.3333%);">
-      <p class="spui-UnderlineTab-labelWrapper">
+      <span class="spui-UnderlineTab-labelWrapper">
         <span class="spui-UnderlineTab-label">フォロワー</span>
-      </p>
+      </span>
     </button>
   </div>
 </div>
@@ -155,24 +155,24 @@ UnderlineTab内の各項目は`tab`roleを持ち、`id`には`options`の`id`が
     </div>
     <div class="spui-UnderlineTab-container" role="tablist">
       <button aria-controls="scrollable-all-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-all" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
-        <p class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-labelWrapper">
           <span class="spui-UnderlineTab-label">すべて</span>
-        </p>
+        </span>
       </button>
       <button aria-controls="scrollable-follow-tabpanel" aria-selected="true" class="spui-UnderlineTab-button" id="scrollable-follow" tabindex="0" type="button" role="tab" style="max-width: fit-content;">
-        <p class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-labelWrapper">
           <span class="spui-UnderlineTab-label">フォロー</span>
-        </p>
+        </span>
       </button>
       <button aria-controls="scrollable-follower-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-follower" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
-        <p class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-labelWrapper">
           <span class="spui-UnderlineTab-label">フォロワー</span>
-        </p>
+        </span>
       </button>
       <button aria-controls="scrollable-others-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-others" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
-        <p class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-labelWrapper">
           <span class="spui-UnderlineTab-label">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
-        </p>
+        </span>
       </button>
     </div>
     <div class="spui-UnderlineTab-arrow spui-UnderlineTab-arrow--right is-showed">
