--- a/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.stories.mdx
+++ b/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.stories.mdx
@@ -99,7 +99,7 @@ UnderlineTab内の各項目は`tab`roleを持ち、`id`には`options`の`id`が
 
 <Source
   code={`
-<div class="spui-UnderlineTab spui-UnderlineTab--fixed spui-UnderlineTab--border">
+<div class="spui-UnderlineTab spui-UnderlineTab--fixed">
   <div class="spui-UnderlineTab-container" role="tablist">
     <button aria-controls="fixed-all-tabpanel" aria-selected="true" class="spui-UnderlineTab-button" id="fixed-all" tabindex="0" type="button" role="tab" style="max-width: calc(33.3333%);">
       <span class="spui-UnderlineTab-labelWrapper">
@@ -146,40 +146,38 @@ UnderlineTab内の各項目は`tab`roleを持ち、`id`には`options`の`id`が
 
 <Source
   code={`
-<div id="story--navigationtab-underlinetab--scrollable">
-  <div class="spui-UnderlineTab spui-UnderlineTab--scrollable spui-UnderlineTab--border">
-    <div class="spui-UnderlineTab-arrow spui-UnderlineTab-arrow--left">
-      <button class="spui-UnderlineTab-arrowButton" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" role="img" aria-label="左に移動"><path d="M13.49 21.06 6.2 13.77c-.97-.97-.97-2.56 0-3.54l7.29-7.29a1.49 1.49 0 0 1 2.12 0c.59.59.59 1.54 0 2.12L8.67 12l6.94 6.94c.59.59.59 1.54 0 2.12-.29.29-.68.44-1.06.44s-.77-.15-1.06-.44Z"></path></svg>
-      </button>
-    </div>
-    <div class="spui-UnderlineTab-container" role="tablist">
-      <button aria-controls="scrollable-all-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-all" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
-        <span class="spui-UnderlineTab-labelWrapper">
-          <span class="spui-UnderlineTab-label">すべて</span>
-        </span>
-      </button>
-      <button aria-controls="scrollable-follow-tabpanel" aria-selected="true" class="spui-UnderlineTab-button" id="scrollable-follow" tabindex="0" type="button" role="tab" style="max-width: fit-content;">
-        <span class="spui-UnderlineTab-labelWrapper">
-          <span class="spui-UnderlineTab-label">フォロー</span>
-        </span>
-      </button>
-      <button aria-controls="scrollable-follower-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-follower" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
-        <span class="spui-UnderlineTab-labelWrapper">
-          <span class="spui-UnderlineTab-label">フォロワー</span>
-        </span>
-      </button>
-      <button aria-controls="scrollable-others-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-others" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
-        <span class="spui-UnderlineTab-labelWrapper">
-          <span class="spui-UnderlineTab-label">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
-        </span>
-      </button>
-    </div>
-    <div class="spui-UnderlineTab-arrow spui-UnderlineTab-arrow--right is-showed">
-      <button class="spui-UnderlineTab-arrowButton" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" role="img" aria-label="右に移動"><path d="M9.41 21.5c-.38 0-.77-.15-1.06-.44a1.49 1.49 0 0 1 0-2.12L15.29 12 8.35 5.06a1.49 1.49 0 0 1 0-2.12c.59-.58 1.54-.59 2.12 0l7.29 7.29c.97.97.97 2.56 0 3.54l-7.29 7.29c-.29.29-.67.44-1.06.44Z"></path></svg>
-      </button>
-    </div>
+<div class="spui-UnderlineTab spui-UnderlineTab--scrollable">
+  <div class="spui-UnderlineTab-arrow spui-UnderlineTab-arrow--left">
+    <button class="spui-UnderlineTab-arrowButton" type="button">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" role="img" aria-label="左に移動"><path d="M13.49 21.06 6.2 13.77c-.97-.97-.97-2.56 0-3.54l7.29-7.29a1.49 1.49 0 0 1 2.12 0c.59.59.59 1.54 0 2.12L8.67 12l6.94 6.94c.59.59.59 1.54 0 2.12-.29.29-.68.44-1.06.44s-.77-.15-1.06-.44Z"></path></svg>
+    </button>
+  </div>
+  <div class="spui-UnderlineTab-container" role="tablist">
+    <button aria-controls="scrollable-all-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-all" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
+      <span class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-label">すべて</span>
+      </span>
+    </button>
+    <button aria-controls="scrollable-follow-tabpanel" aria-selected="true" class="spui-UnderlineTab-button" id="scrollable-follow" tabindex="0" type="button" role="tab" style="max-width: fit-content;">
+      <span class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-label">フォロー</span>
+      </span>
+    </button>
+    <button aria-controls="scrollable-follower-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-follower" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
+      <span class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-label">フォロワー</span>
+      </span>
+    </button>
+    <button aria-controls="scrollable-others-tabpanel" aria-selected="false" class="spui-UnderlineTab-button" id="scrollable-others" tabindex="-1" type="button" role="tab" style="max-width: fit-content;">
+      <span class="spui-UnderlineTab-labelWrapper">
+        <span class="spui-UnderlineTab-label">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
+      </span>
+    </button>
+  </div>
+  <div class="spui-UnderlineTab-arrow spui-UnderlineTab-arrow--right is-showed">
+    <button class="spui-UnderlineTab-arrowButton" type="button">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" role="img" aria-label="右に移動"><path d="M9.41 21.5c-.38 0-.77-.15-1.06-.44a1.49 1.49 0 0 1 0-2.12L15.29 12 8.35 5.06a1.49 1.49 0 0 1 0-2.12c.59-.58 1.54-.59 2.12 0l7.29 7.29c.97.97.97 2.56 0 3.54l-7.29 7.29c-.29.29-.67.44-1.06.44Z"></path></svg>
+    </button>
   </div>
 </div>
   `}
