docs(spindle-ui): コンポーネント表記の修正 Snackbar -> SnackBar

--- a/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
@@ -137,7 +137,7 @@ SnackBarコンポーネントは、利用者に一時的なお知らせをする
 | Component | 用途 | テキストの長さ | 追加のアクション | 自動で消える秒数 | 表示位置 |
 | ---- | ---- | ---- | ---- | ---- | ---- |
 | [Toast](/docs/toast--information) | 更新処理の**成功を伝える**<br />**見落としても支障がないもの** | 1行 | なし | 4秒 | フローティング<br />（画面上下の中央のみ※） |
-| [Snackbar](/docs/snackbar--information) | **読んでは欲しい訴求** | 3,4行まで | あり | 10秒 | フローティング<br />（画面上下の左・右・中央） |
+| [SnackBar](/docs/snackbar--information) | **読んでは欲しい訴求** | 3,4行まで | あり | 10秒 | フローティング<br />（画面上下の左・右・中央） |
 | [InlineNotification](/docs/inlinenotification--information) | 更新処理の**失敗を伝える**<br />**ユーザーが追加でアクションする必要があるもの** | 制限なし | あり | 消えない | ページに埋め込む必要があり、レイアウトに影響を与える |
 
 ※現在は、SPは中央下のみ実装されています。
