--- a/packages/spindle-ui/src/Toast/Toast.stories.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.stories.mdx
@@ -117,7 +117,7 @@ Toastコンポーネントは、利用者に一時的なお知らせをする際
 
 ## ユーザーへの通知の種別
 
-ユーザーにお知らせをするための他のComponentとしてSnackbarとInlineNotificationがあります。画面内で完結せず、遷移させるべき状況もあります。現状下記のように使い分けています。
+ユーザーにお知らせをするための他のComponentとしてSnackBarとInlineNotificationがあります。画面内で完結せず、遷移させるべき状況もあります。現状下記のように使い分けています。
 
 ### 通信を伴うデータ更新のフィードバック
 
