docs(spindle-ui): 通知系コンポーネントの説明を修正

--- a/packages/spindle-ui/storybook/UserNotificationTypes.mdx
+++ b/packages/spindle-ui/storybook/UserNotificationTypes.mdx
@@ -1,12 +1,10 @@
 ## ユーザーへの通知の種別
 
-ユーザーへの通知を提示するComponentとしてToast、SnackBar、InlineNotificationがあります。画面内で完結せず、遷移させるべき状況もあります。現状下記のように使い分けています。
+ユーザーに画面内で通知する手段としてToast、SnackBar、InlineNotificationコンポーネントがあります。画面内で完結せず、遷移させるべき状況もあります。現状下記のように使い分けています。
 
 | 選択肢 | 用途 | テキストの長さ | 追加のアクション | 自動で消える秒数 | 表示位置 |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| [Toast](/docs/toast--information) | 更新処理の**成功を伝える**<br />**見落としても支障がないもの** | 1行 | なし | 4秒 | フローティング<br />（画面上下の中央のみ※） |
-| [SnackBar](/docs/snackbar--information) | **読んでは欲しい訴求** | 3,4行まで | あり | 10秒 | フローティング<br />（画面上下の左・右・中央） |
+| [Toast](/docs/toast--information) | 更新処理の**成功を伝える**<br />**見落としても支障がないもの** | 1行 | なし | 4秒 | フローティング<br />（画面上下の中央のみ） |
+| [SnackBar](/docs/snackbar--information) | **読んでは欲しい訴求** | 3行まで | あり | 10秒 | フローティング<br />（画面上下の左・右・中央） |
 | [InlineNotification](/docs/inlinenotification--information) | 更新処理の**失敗を伝える**<br />**ユーザーが追加でアクションする必要があるもの** | 制限なし | あり | 消えない | ページに埋め込む必要があり、レイアウトに影響を与える |
 | 画面外へ遷移させる | 一連の動作にゴールがある（登録時の完了画面など）<br />「元の画面に戻る」動作をさせたい時 | 制限なし | 制限なし | 消えない | 別ページ |
-
-※現在は、SPは中央下のみ実装されています。
