--- a/packages/spindle-ui/src/Toast/Toast.stories.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.stories.mdx
@@ -112,9 +112,7 @@ export const MultiActivateButton = ({ offset, icon, position }) => {
 
 <Meta title="Toast" component={Toast} />
 
-Toastコンポーネントは、利用者に一時的なお知らせをする際に利用します。画面上に複数表示できます。Toastは自動で消えてしまうため、見落とされても影響のない「重要ではないお知らせ」に用います。利用する際には、その他により適切な手段がないか必ず確認してください。
-
-「重要なお知らせ」とは何かは別途まとめる予定です。
+Toastコンポーネントは、ユーザーの操作を邪魔しないよう**非同期的にシステムやUIのフィードバックをユーザーへ通知する**ために用います。画面のレイアウトや状態に影響を与えないので、特にユーザーへの影響値を最小限にできます。一方で、一定時間で消滅するため、ユーザーが見落としてしまっても同一の内容を確認できる**代替手段がある場合に使う**必要があります。（詳しい事例は「[利用時に注意してほしいこと](#利用時に注意してほしいこと)」参照）
 
 <UserNotificationTypes />
 
@@ -266,24 +264,15 @@ Toastコンポーネントは、利用者に一時的なお知らせをする際
 
 ## 利用時に注意してほしいこと
 
-<Description>
-  -
-  Toastは自動で消えてしまうため、見落とされても影響のない、「重要ではないお知らせ」に用います
-</Description>
-<Description>
-  - アイコンの設定は利用者に委ねられていますが、基本的には設定します。**`information`のみアイコンを外すことができます。**
-</Description>
-<Description>
-  - `z-index`はdefaultでは`1`になっていますが、必要に応じて`--Toast-z-index`を設定してください
-</Description>
-<Description>
-  -
-  このコンポーネントでは関与しませんが、ライブリージョンをアプリケーションで実装してください（参考：[実装方法 - 4.1.3 コンテンツの変更をユーザーに知らせる - Ameba Accessibility Guidelines](https://a11y-guidelines.ameba.design/4/1/3/#%E5%AE%9F%E8%A3%85%E6%96%B9%E6%B3%95)）
-</Description>
-<Description>
-  -
-  ライブリージョンは次のように実装します。 `html` 側に `aria-live="polite"` 及び `role="status"` を持つ要素を予め埋め込んでおき、この要素にコンテンツを動的に挿入することで、スクリーンリーダーが自動でコンテンツを読み上げてくれます。
-</Description>
+- Toastは自動で消えてしまうため、ユーザーが見落としてしまっても同一の内容を確認できる代替手段がある場合に使います
+  - 例：「URLをコピーしました」のToast通知と並行して、コピーボタンのマークがチェックマーク付きのアイコンに切り替わっている
+    - ボタンの表示が切り替わることで、完了を認知できる（通知の代替手段になり得る）
+- アイコンの設定は利用者に委ねられていますが、基本的には設定します。**`information`のみアイコンを外すことができます**
+- `z-index`はdefaultでは`1`になっていますが、必要に応じて`--Toast-z-index`を設定してください
+- 自動的に消えてしまうため、画面内で的確に認知できる必要があります。画面拡大時にもToast内の情報が見切れることのないよう注意してください（参考：[1.4.10 リフローできる - Ameba Accessibility Guidelines](https://a11y-guidelines.ameba.design/1/4/10)）
+-
+このコンポーネントでは関与しませんが、ライブリージョンをアプリケーションで実装してください（参考：[実装方法 - 4.1.3 コンテンツの変更をユーザーに知らせる - Ameba Accessibility Guidelines](https://a11y-guidelines.ameba.design/4/1/3/#%E5%AE%9F%E8%A3%85%E6%96%B9%E6%B3%95)）
+- ライブリージョンは次のように実装します。 `html` 側に `aria-live="polite"` 及び `role="status"` を持つ要素を予め埋め込んでおき、この要素にコンテンツを動的に挿入することで、スクリーンリーダーが自動でコンテンツを読み上げてくれます
 
 <Source
   code={`
