--- a/packages/spindle-ui/storybook/UserNotificationTypes.mdx
+++ b/packages/spindle-ui/storybook/UserNotificationTypes.mdx
@@ -1,10 +1,13 @@
 ## ユーザーへの通知の種別
 
-ユーザーに画面内で通知する手段としてToast、SnackBar、InlineNotificationコンポーネントがあります。画面内で完結せず、遷移させるべき状況もあります。現状下記のように使い分けています。
+ユーザーに画面内で通知する手段としてToast、SnackBar、InlineNotification、Dialogコンポーネントがあります。画面内で完結せず、遷移させるべき状況もあります。現状下記のように使い分けています。
+
+なお、ToastとSnackBarは自動で消えてしまうため、**その通知内容を確認できる他の手段がある場合にのみ**利用できます。「コンテンツの確実な伝達」ではなく「ユーザーの行動を中断することなく示唆する」ことを目的として用います。
 
 | 選択肢 | 用途 | テキストの長さ | 追加のアクション | 自動で消える秒数 | 表示位置 |
 | ---- | ---- | ---- | ---- | ---- | ---- |
-| [Toast](/docs/toast--information) | 更新処理の**成功を伝える**<br />**見落としても支障がないもの** | 1行 | なし | 4秒 | フローティング<br />（画面上下の中央のみ） |
-| [SnackBar](/docs/snackbar--information) | **読んでは欲しい訴求** | 3行まで | あり | 10秒 | フローティング<br />（画面上下の左・右・中央） |
-| [InlineNotification](/docs/inlinenotification--information) | 更新処理の**失敗を伝える**<br />**ユーザーが追加でアクションする必要があるもの** | 制限なし | あり | 消えない | ページに埋め込む必要があり、レイアウトに影響を与える |
+| [Toast](/docs/toast--information) | 更新処理の**成功を伝える**<br />完了タイミングに気づくための最低限のフィードバック | 1行 | なし | 4秒 | フローティング<br />（画面上下の中央のみ） |
+| [SnackBar](/docs/snackbar--information) | ユーザーにとって読む価値があるもの<br />ユーザーが追加のアクションを実行しなくても完結するもの | 3行まで | あり | 10秒 | フローティング<br />（画面上下の左・右・中央） |
+| [InlineNotification](/docs/inlinenotification--information) | 更新処理の**失敗を伝える**<br />ユーザーが追加のアクションを実行すると通知の役割を果たすもの | 制限なし | あり | 消えない | ページに埋め込む必要があり、レイアウトに影響を与える |
+| [Dialog](/docs/dialog--normal) | ユーザーのメインタスクを中断して確認してもらうべき重要な通知 | 制限なし | あり | 消えない | モーダル |
 | 画面外へ遷移させる | 一連の動作にゴールがある（登録時の完了画面など）<br />「元の画面に戻る」動作をさせたい時 | 制限なし | 制限なし | 消えない | 別ページ |
