refactor(spindle-ui): replace icon index imports with direct imports in mdx/stories

--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -1,7 +1,10 @@
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { Button } from './Button';
-import { PlusBold, Link, FileAdd, ChevronDownBold } from '../Icon';
+import PlusBold from '../Icon/PlusBold';
+import Link from '../Icon/Link';
+import FileAdd from '../Icon/FileAdd';
+import ChevronDownBold from '../Icon/ChevronDownBold';
 
 # Button
 
