--- a/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
+++ b/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
@@ -1,7 +1,7 @@
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { IconButton } from './IconButton';
-import { PlusBold } from '../Icon';
+import PlusBold from '../Icon/PlusBold';
 
 # IconButton
 <Description>
