--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
@@ -1,7 +1,11 @@
 import { useState } from 'react'
 import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { InlineNotification } from './InlineNotification';
-import { Information, CheckCircleFill, Openblank, ExclamationmarkCircleFill, CrossBold } from '../Icon';
+import Information from '../Icon/Information';
+import CheckCircleFill from '../Icon/CheckCircleFill';
+import Openblank from '../Icon/Openblank';
+import ExclamationmarkCircleFill from '../Icon/ExclamationmarkCircleFill';
+import CrossBold from '../Icon/CrossBold';
 import {
   VisiblePropsSample
 } from './InlineNotification.stories.example';
