--- a/packages/spindle-ui/src/LinkButton/LinkButton.stories.mdx
+++ b/packages/spindle-ui/src/LinkButton/LinkButton.stories.mdx
@@ -1,7 +1,14 @@
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { LinkButton } from './LinkButton';
-import { PlusBold, ArrowRightBold, OpenblankFill, Link, GraphBar, Present, PencilAdd, ChevronDownBold } from '../Icon';
+import PlusBold from '../Icon/PlusBold';
+import ArrowRightBold from '../Icon/ArrowRightBold';
+import OpenblankFill from '../Icon/OpenblankFill';
+import Link from '../Icon/Link';
+import GraphBar from '../Icon/GraphBar';
+import Present from '../Icon/Present';
+import PencilAdd from '../Icon/PencilAdd';
+import ChevronDownBold from '../Icon/ChevronDownBold';
 
 # LinkButton
 
