--- a/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
@@ -3,7 +3,11 @@ import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { SnackBar } from './SnackBar';
 import { Button } from '../Button';
-import { Information, CheckCircleFill, Openblank, ExclamationmarkCircleFill } from '../Icon';
+import Information from '../Icon/Information';
+import CheckCircleFill from '../Icon/CheckCircleFill';
+import Openblank from '../Icon/Openblank';
+import ExclamationmarkCircleFill from '../Icon/ExclamationmarkCircleFill';
+
 
 export const usePoliteAnnouncer = (message) => {
   const announcer = useRef(null);
