--- a/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
+++ b/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
@@ -1,7 +1,9 @@
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { TextButton } from './TextButton';
-import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
+import ChevronRightBold from '../Icon/ChevronRightBold';
+import CameraFill from '../Icon/CameraFill';
+import PencilAdd from '../Icon/PencilAdd';
 
 # TextButton
 
