--- a/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
+++ b/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
@@ -1,7 +1,9 @@
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { TextLink } from './TextLink';
-import { ChevronRightBold, CameraFill, PencilAdd } from '../Icon';
+import ChevronRightBold from '../Icon/ChevronRightBold';
+import CameraFill from '../Icon/CameraFill';
+import PencilAdd from '../Icon/PencilAdd';
 
 # TextLink
 
