--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
@@ -30,7 +30,7 @@ import UserNotificationTypes from '../../storybook/UserNotificationTypes.mdx';
   code={`<link rel="stylesheet" href="https://unpkg.com/@openameba/spindle-ui/InlineNotification/InlineNotification.css">`}
 />
 
-InlineNotificationコンポーネントは、ユーザーの操作を中断せず、システムやUIの状態を簡易的にユーザーへ連絡するために用います。重要なメッセージや、告知や新機能リリースなどの、その画面の目的とは異なる簡易的なお知らせなどに役立ちます。
+InlineNotificationコンポーネントは、ユーザーの操作を中断せず、システムやUIの状態を簡易的にユーザーへ連絡するために用います。重要なメッセージや、告知や新機能リリースなど、その画面の目的とは異なる簡易的なお知らせなどに役立ちます。
 
 
 ユーザーのアクションに対してお知らせをする際に利用します。Toast, SnackBarのようにコンテンツに重ねての表示ではなく、コンテンツと同じ階層での表示になります。
