--- a/packages/spindle-ui/src/Form/TextField.stories.mdx
+++ b/packages/spindle-ui/src/Form/TextField.stories.mdx
@@ -44,6 +44,8 @@ import { TextField } from './TextField';
 
 ## Large With Error
 
+<Description>エラー表示にするには`hasError`プロパティを付与してください。また、`:user-invalid`擬似クラスが付与される条件では`hasError`プロパティに関係なくエラー表示になります。</Description>
+
 <Preview withSource="open">
   <Story name="Large With Error">
     <TextField placeholder="ameba-blog" hasError id="TextFieldWithError" variant="large" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
