feat(spindle-ui): buttonSwitchをエクスポート

--- a/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.stories.mdx
+++ b/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.stories.mdx
@@ -8,7 +8,7 @@ export const WrappedButtonSwitch = ({ options, defaultValue }) => {
   return (
     <div className="preview">
       <ButtonSwitch
-        id="aaa"
+        id="unique-id"
         options={options}
         value={value}
         onClick={(newValue) => {
@@ -82,7 +82,5 @@ export const WrappedButtonSwitch = ({ options, defaultValue }) => {
     />
   </Story>
 </Preview>
-
-<Source language="html" code={``} />
 
 <Source language="html" code={``} />
