--- a/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.stories.mdx
+++ b/packages/spindle-ui/src/ButtonSwitch/ButtonSwitch.stories.mdx
@@ -6,17 +6,11 @@ import { ButtonSwitchExample } from './ButtonSwitch.stories.example';
 
 # ButtonSwitch
 
-<Description>
-  2つの選択肢のうち1つを選択するためのコンポーネントです。
-</Description>
+2つの選択肢のうち1つを選択するためのコンポーネントです。
 
-<Description>
-  スイッチのような操作感を持ち、選択肢を切り替えることができます。どちらも選択していないニュートラルな状態を持つこともできます。
-</Description>
+スイッチのような操作感を持ち、選択肢を切り替えることができます。どちらも選択していないニュートラルな状態を持つこともできます。
 
-<Description>
-  2つの選択肢のうち1つを選択するためのコンポーネントです。スイッチのような操作感を持ち、選択肢を切り替えることができます。どちらも選択していないニュートラルな状態を持つこともできることが、[Radio](https://ameba-spindle.web.app/?path=/story/form-radio--radio)や[ToggleSwitch](https://ameba-spindle.web.app/?path=/docs/form-toggleswitch--toggle-switch)との違いです。
-</Description>
+2つの選択肢のうち1つを選択するためのコンポーネントです。スイッチのような操作感を持ち、選択肢を切り替えることができます。どちらも選択していないニュートラルな状態を持つこともできることが、[Radio](https://ameba-spindle.web.app/?path=/story/form-radio--radio)や[ToggleSwitch](https://ameba-spindle.web.app/?path=/docs/form-toggleswitch--toggle-switch)との違いです。
 
 <Meta title="ButtonSwitch" component={ButtonSwitch} />
 
@@ -37,24 +31,31 @@ import { ButtonSwitchExample } from './ButtonSwitch.stories.example';
 
 ## 指定できるプロパティ
 
-<Description>
-  - `options`(必須):
-  表示する項目について配列で指定してください。`value`は項目を識別するための値であり、配列内で一意である必要があります。`label`は画面に表示される値です。推奨する最大文字数は5文字です。
-</Description>
-<Description>
-  - `value`(必須):
-  `options`プロパティに指定した配列に含まれる`value`のうちはじめから選択されている状態とする項目の`value`を指定します。値が`null`の場合、どの項目も選択していない状態になります。
-</Description>
-<Description>
-  - `onClick`(任意):
-  項目がクリックされたときに追加で行いたい処理がある場合は指定してください。
-</Description>
+- `id`: コンポーネントを識別するためのIDです。ラベルを表示する場合は`for`属性に同じ値を指定してください。ページ内でユニークな値を指定してください。
+- `options`(必須): 表示する項目について配列で指定してください。
+  - `value`: 項目を識別するための値です。配列内で一意である必要があります。
+  - `label`: 画面に表示される値です。推奨する最大文字数は5文字です。
+- `value`(必須): `options`プロパティに指定した配列に含まれる`value`のうちはじめから選択されている状態とする項目の`value`を指定します。値が`null`の場合、どの項目も選択していない状態になります。
+- `onClick`(任意):項目がクリックされたときに追加で行いたい処理がある場合は指定してください。
 
-## Total
-
-### Two options
+## 項目数
 
 `options`プロパティに指定された配列の項目数に依存します。基本的には2つの選択肢を持つことを推奨しますが、3つ以上の選択肢を持つことも可能です。
+
+### 1つの選択肢
+
+項目数が1のケースも許容していますが、ToggleSwitchの利用も検討してください。
+
+<Preview withSource="open">
+  <Story name="Normal">
+    <ButtonSwitchExample
+      defaultValue="prefer"
+      options={[{ value: 'prefer', label: 'できれば' }]}
+    />
+  </Story>
+</Preview>
+
+### 2つの選択肢
 
 <Preview withSource="open">
   <Story name="Normal">
@@ -68,7 +69,7 @@ import { ButtonSwitchExample } from './ButtonSwitch.stories.example';
   </Story>
 </Preview>
 
-### Three options
+### 3つの選択肢
 
 <Preview withSource="open">
   <Story name="Three options">
@@ -83,4 +84,23 @@ import { ButtonSwitchExample } from './ButtonSwitch.stories.example';
   </Story>
 </Preview>
 
-<Source language="html" code={``} />
+<Source language="tsx" code={`
+import React, { useState } from 'react';
+import { ButtonSwitch } from './ButtonSwitch';
+
+export const ButtonSwitchExample = ({ options, defaultValue }) => {
+  const [value, setValue] = useState(defaultValue);
+  return (
+    <div className="preview">
+      <ButtonSwitch
+        id="unique-id"
+        options={options}
+        value={value}
+        onClick={(newValue) => {
+          setValue(value === newValue ? null : newValue);
+        }}
+      />
+    </div>
+  );
+};
+`} />
